--- a/lab2/index.html
+++ b/lab2/index.html
@@ -33,7 +33,7 @@ a {
 <script type="text/javascript">
     var is_chrome = navigator.userAgent.toLowerCase().indexOf('chrome') > -1;
     if(is_chrome) {
-        document.write("<div id='warning'><h2>Please note that you need to run chrome/chromium with the flag '--allow-file-access-from-files' to see the texture. (It works in firefox and is untested in other browsers.)'</div>");
+        document.write("<div id='warning'><h2>Please note that you need to run chrome/chromium with the flag '--allow-file-access-from-files' to see the texture. (It works in firefox and is untested in other browsers.)</div>");
     }
 </script>
 
