Moving the movies to a separate directory.

--- a/lab3/index.html
+++ b/lab3/index.html
@@ -22,8 +22,8 @@ body {
 </header>
 <h1 id="movie">Movie created from work in Maya.</h1>
 <video width=640 height=360 controls>
-    <source src="movie.mp4" type="video/mp4">
-    <source src="movie.ogg" type="video/ogg">
+    <source src="movies/movie.mp4" type="video/mp4">
+    <source src="movies/movie.ogg" type="video/ogg">
     Please use a browser with HTML5 support.
 </video>
 <body onLoad="startThree();">
